<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#000">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btToast"
        android:id="@+id/buttonToast"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btStatus"
        android:id="@+id/buttonStatusBar"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/buttonToast"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btAlert"
        android:id="@+id/buttonAlert"
        android:layout_below="@+id/buttonStatusBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btProgress"
        android:id="@+id/buttonProgress"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/buttonAlert"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datePicker"
        android:id="@+id/buttonDatePicker"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/buttonProgress"
        android:layout_centerHorizontal="true"
        android:onClick="showDatePickerDialog" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timePicker"
        android:id="@+id/buttonTimePicker"
        android:layout_below="@+id/buttonDatePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="showTimePickerDialog" />

</RelativeLayout>
